feat: multi-device support for GPUs, fixed layer norm and summary